Box model practice

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         </div>
 
         <div id="border-layout-two"> 
-            <h1>Even more practice</h1>
+            <h1>My power is growing!</h1>
+            <img src="../html-css-practice/images/unlimited-power-star-wars.gif" alt="Unlimited power">
+            <h2>Link to FlexBox practice</h2>
+            <p>I just wanted an excuse to use this GIF. Here is a link to my <a href="../html-css-practice/links/flexbox-practice.html" target="_blank">FlexBox practice.</a></p>
         </div>
     </body>
 </html>
