Absolute positioning practice

--- a/links/box-model-practice.html
+++ b/links/box-model-practice.html
@@ -5,24 +5,27 @@
         <meta charset="utf-8">
         <title>Box model Practice</title>
     </head>
-    <body>
-        <div id="container">
+    <body id="body-class"> 
+            <div id="container">
 
-            <div id="about-star-wars">
-            <h1>All about Star Wars</h1>
-            <h2>Why I <span id="about-span">Love</span> Star Wars</h2>
-            <ul>
-                <li id="windu">Lightsabers</li>
-                <li id="yoda">Space Ships</li>
-                <li id="vader">Darth Vader is cool</li>
-            </ul>
-            </div>   
-            
             <div id="official-info">
                 <h1>Official info on Star Wars</h1>
                 <img id="new-hope-img" src="../images/new-hope.jpeg" alt="new hope">
-                <p id="star-wars-description">Star Wars</p>
+                <p id="star-wars-description">Star Wars is a story about good space <br>wizards and evil space wizards. <br>The good space wizards use green, blue <br>and sometimes purple lightsabers and 
+                <br>the evil space wizards use red lightsabers. <br>These space wizards use a special power <br>called the force, which can be used to <br> do incredible things, such as moving
+                <br>heavy objects with their mind, play mind <br>tricks, create lighting and even prevent<br> death.</p>
             </div>
-        </div>
+
+            <div id="star-wars-history">
+                <h1>Star Wars history</h1>
+                <img src="../images/star-history.jpg" alt="Luke and leia, vader in background">
+                <p id="star-wars-description">Hello there</p>
+            </div>
+
+            <div id="best-characters">
+                <h1>Best Star Wars Characters</h1>
+            </div>
+
+            </div>
     </body>
 </html>
