Flexbox and box model practice

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
         <title>HTML & CSS Practice</title>
     </head>
     <body>
-        <div id="border-layout">
+        <div id="official-info">
         <h1>We talking about practice!</h1>
         <img src="../html-css-practice/images/AI.gif" alt="Allen Iverson talking about practice">
         <h2>Link to Box Model practice</h2>
         <p>We talking about a link to my <a href="../html-css-practice/links/box-model-practice.html" target="_blank">Box Model</a> practice, man.</p>
         </div>
 
-        <div id="border-layout-two"> 
+        <div id="star-wars-history"> 
             <h1>My power is growing!</h1>
             <img src="../html-css-practice/images/unlimited-power-star-wars.gif" alt="Unlimited power">
             <h2>Link to FlexBox practice</h2>
