--- a/links/box-model-practice.html
+++ b/links/box-model-practice.html
@@ -19,11 +19,28 @@
             <div id="star-wars-history">
                 <h1>Star Wars history</h1>
                 <img src="../images/star-history.jpg" alt="Luke and leia, vader in background">
-                <p id="star-wars-description">Hello there</p>
+                <p id="star-wars-description">Star Wars is an American epic space-opera multimedia franchise<br> created by George Lucas, which began with the eponymous 1977 film<br> and quickly became a worldwide pop-culture phenomenon.
+                <br>The franchise has been expanded into various films and other media,<br> including television series, video games, novels, comic books, theme park attractions,<br> and themed areas, comprising an all-encompassing fictional universe.<br>
+                    In 2020, its total value was estimated at US$70 billion,<br> and it is currently the fifth-highest-grossing media franchise of all time. </p>
             </div>
 
             <div id="best-characters">
-                <h1>Best Star Wars Characters</h1>
+                <h1>Top 5 Star Wars Characters</h1>
+                <img src="../images/vader.jpeg" alt="Darth Vader">
+                <ol id="star-wars-description">
+                    <li>Darth Vader/Anakin's descent into Vader</li>
+                    <p>The story of Anakin's descent into Darth Vader and becoming the most feared being in the universe, is the best story told in Star Wars.</p>
+                    <li>Obi-Wan Kenobi</li>
+                    <p>The headstrong and loyal Obi-wan Kenobi, who beat Anakin head to head in a saber fight, proves how strong Obi-Wan is.</p>
+                    <li>Han Solo</li>
+                    <p>Hands down the smoothest and coolest smuggler in the universe who could pull off any mission he wanted to, along with his sidekick Chewie</p>
+                    <li>Luke Skywalker</li>
+                    <p>The Jedi who went on a suicide mission to the Death Star to tempt Vader away from the dark side, why? because he was his family. How can you not love a guy like that.</p>
+                    <li>Darth Sidious/Emperor Palpatine</li>
+                    <p>The most evil being in the entire galaxy, the one who manipulated Anakin towards the dark side, the one who fooled the Jedi and masked his existence as a Sith Lord,<br> 
+                       the one who orchestrated order 66, what more can you say, he is a legendary villain.</p>
+                </ol>
+               
             </div>
 
             </div>
