more emmet practice

--- a/emmet.html
+++ b/emmet.html
@@ -64,5 +64,12 @@
     </header>
     <main></main>
     <footer></footer>
+    <p class="text"></p>
+    <div>
+        <p></p>
+    </div>
+    <p class="class"></p>
+    <p class="class"></p>
+    <p class="class"></p>
 </body>
 </html>
