--- a/html-practice/svg.html
+++ b/html-practice/svg.html
@@ -2,6 +2,6 @@
 baseProfile="full"
 width="300" height="200"
 xmlns="http://www.w3.org/2000/svg">
-<rect width="100%" height="100%" fill="black" />
-<circle cx="150" cy="100" r="90" fill="blue" />
+<rect width="100%" height="100%" fill="red" />
+<circle cx="150" cy="100" r="90" fill="yellow" />
 </svg>
