--- a/html-table-basics/dogs-table.html
+++ b/html-table-basics/dogs-table.html
@@ -47,6 +47,34 @@
       </tr>
     </table>
 
+<div style="margin-top:20px">
+    <table>
+        <tr>
+          <th colspan="2">Animals</th>
+        </tr>
+        <tr>
+          <th colspan="2">Hippopotamus</th>
+        </tr>
+        <tr>
+          <th rowspan="2">Horse</th>
+          <td>Mare</td>
+        </tr>
+        <tr>
+          <th>Stallion</th>
+        </tr>
+        <tr>
+          <th colspan="2">Crocodile</th>
+        </tr>
+        <tr>
+          <th rowspan="2">Chicken</th>
+          <td>Hen</td>
+        </tr>
+        <tr>
+          <th>Rooster</th>
+        </tr>
+      </table>
+</div>
+
 
   </body>
 </html>
