--- a/html-table-basics/timetable.html
+++ b/html-table-basics/timetable.html
@@ -34,6 +34,7 @@
     <h1>School timetable</h1>
 
     <table>
+        <caption>This week's teaching timetable</caption>
         <colgroup> 
             <col>
             <col>
