pseudo classes/nth-child practice

--- a/css-practice/viewport-practice.html
+++ b/css-practice/viewport-practice.html
@@ -22,6 +22,26 @@
         </p>
     </article>
 
+
+    <a href="google.com"> google</a>
+
+    <div class="parent">
+        <div class="child"></div>
+        <div class="child"></div>
+        <div>
+            <div class="grand-child">
+                <div></div>
+            </div>
+        </div>
+    </div>
     
-    
+    <ul>
+        <li class="list">1</li>
+        <li class="list">2</li>
+        <li class="list">3</li>
+        <li class="list">4</li>
+        <li class="list">5</li>
+    </ul>
+
+
 </body>
