using min() to make a responsive image resize feature

--- a/css-practice/css-functions/css-functions.html
+++ b/css-practice/css-functions/css-functions.html
@@ -11,7 +11,14 @@
 
     <div class="container">
         <header class="header">Header</header>
-        <main class="main">Main</main>
+        <main class="main">
+
+            <div id="text"> Resize me by clicking the bottom right</div>
+        <div id="container">
+            <img id="iconHolder" src="../../images/new-hope.jpeg" alt="">
+        </div>
+
+        </main>
         <footer class="footer">Footer</footer>
     </div>
     
