toggle theme light/dark functionality working

--- a/css-practice/css-functions/css-functions.html
+++ b/css-practice/css-functions/css-functions.html
@@ -13,14 +13,20 @@
         <header class="header">Header</header>
         <main class="main">
 
-            <div id="text"> Resize me by clicking the bottom right</div>
+            <div id="text"> Resize me by clicking the bottom right min()</div>
         <div id="container">
             <img id="iconHolder" src="../../images/new-hope.jpeg" alt="">
+        </div>
+
+        <div id="text-two"> Resize me by clicking the bottom right max()</div>
+        <div id="container-two">
+            <img id="iconHolder-two" src="../../images/new-hope.jpeg" alt="">
         </div>
 
         </main>
         <footer class="footer">Footer</footer>
     </div>
+    
     
 </body>
 </html>
