flexbox page structure example

--- a/flexbox-practice/flexbox.html
+++ b/flexbox-practice/flexbox.html
@@ -11,7 +11,11 @@
 
     <header>header</header>
     <div class="main">
-        <article>Article</article>
+        <article>
+            <div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium incidunt dolore facere cum in, reprehenderit sit pariatur ea libero. Adipisci similique quod exercitationem libero eius saepe voluptas consequuntur architecto esse?</p>
+            </div>
+        </article>
         <nav>Nav</nav>
         <aside>Aside</aside>
     </div>
