--- a/form-basics/speaker-submission.html
+++ b/form-basics/speaker-submission.html
@@ -15,9 +15,39 @@
 
     <form action="" method="get" class="speaker-form">
         <div class="form-row">
-            <label for="full-name">Name:</label>
+            <label for="full-name">Name</label>
             <input type="text" id="full-name" name="full-name">
         </div>
+
+        <div class="form-row">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="you@example.com">
+        </div>
+
+         <fieldset class="legacy-form-row">  <!-- all radio buttons should be wrapped in a <fieldset> -->
+            <legend>Type of Talk</legend>
+            <input type="radio" id="talk-type-1" name="talk-type" value="main-stage">
+            <label for="talk-type-1" class="radio-label">Main Stage</label>
+            <input type="radio" id="talk-type-2" name="talk-type" value="workshop" checked>
+            <label for="talk-type-2" class="radio-label">Workshop</label>
+        </fieldset>
+
+        <div class="form-row">
+            <label for="t-shirt">T-Shirt Size</label>
+            <select name="t-shirt" id="t-shirt">
+                <option value="xs">Extra small</option>
+                <option value="s">Small</option>
+                <option value="m">Medium</option>
+                <option value="l">Large</option>
+            </select>
+        </div>
+
+        <div class="form-row">
+            <label for="abstract"></label>
+            <textarea name="abstract" id="abstract" cols="30" rows="10"></textarea>
+            <div class="instructions">Describe your talk in 500 words or less</div>
+        </div>
+
     </form>
 </body>
 </html>
