form w/ examples of styling text/radio/email/textarea/checkbox/select & option

--- a/form-basics/speaker-submission.html
+++ b/form-basics/speaker-submission.html
@@ -48,6 +48,16 @@
             <div class="instructions">Describe your talk in 500 words or less</div>
         </div>
 
+        <div class="form-row">
+            <label for="avialable" class="checkbox-label"></label>
+            <input type="checkbox" id="available" name="available" value="is-available">
+            <span>I'm actually available the date of the talk</span>
+        </div>
+
+        <div class="form-row">
+            <button type="submit">Submit</button>
+        </div>
+
     </form>
 </body>
 </html>
