validation type: min & max length

--- a/form-validation/validation-types.html
+++ b/form-validation/validation-types.html
@@ -20,9 +20,14 @@
         </div>
 
         <div>
+            <label for="tweet">Tweet</label>
+            <textarea name="tweet" id="tweet" cols="30" rows="10" minlength="3" maxlength="120"></textarea>
+        </div>
+
+        <div>
             <button type="submit">Submit</button>
         </div>
-        
+
     </form>
 </body>
 </html>
