--- a/form-validation/validation-types.html
+++ b/form-validation/validation-types.html
@@ -25,6 +25,12 @@
         </div>
 
         <div>
+            <label for="number">Quantity</label>
+            <input type="number" id="number" name="number" min="1" max="10" required>
+        </div>
+
+        <div>
+
             <button type="submit">Submit</button>
         </div>
 
