grid template area test

--- a/grid-practice/grid-test.html
+++ b/grid-practice/grid-test.html
@@ -27,6 +27,13 @@
         <div class="room" id="bathroom">bathroom</div>
         <div class="room" id="kitchen">kitchen</div>
     </div>
+
+    <div class="grid-area">
+        <div id="one">one</div>
+        <div id="two">two</div>
+        <div id="three">three</div>
+        <div id="four">four</div>
+    </div>
     
 </body>
 </html>
