responsive mobile/tablet/desktop design

--- a/flexbox-practice/flexbox.html
+++ b/flexbox-practice/flexbox.html
@@ -9,17 +9,34 @@
 </head>
 <body>
 
-    <header>header</header>
-    <div class="main">
-        <article>
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium incidunt dolore facere cum in, reprehenderit sit pariatur ea libero. Adipisci similique quod exercitationem libero eius saepe voluptas consequuntur architecto esse?</p>
-            </div>
-        </article>
-        <nav>Nav</nav>
-        <aside>Aside</aside>
-    </div>
-    <footer>Footer</footer>
-    
+    <main id="container">
+        <header>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos cumque et harum culpa odio nemo aliquam nam maiores eaque, placeat optio, nobis maxime architecto voluptatum.</p>
+        </header>
+
+        <section>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam quidem expedita magnam commodi,
+                 et sed sit a voluptas ut quas aliquid modi assumenda doloribus. Quod pariatur rem, maiores consectetur expedita cum dolore placeat non provident sapiente minus eum excepturi exercitationem?</p>
+        </section>
+
+        <div class="flex-container wrapper">
+            <section id="content">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure autem ipsa facilis ullam dolorem libero totam quasi voluptate, eligendi corporis repellat neque, vitae maxime labore cumque obcaecati
+                    laboriosam iste omnis praesentium error deleniti? Officia recusandae perferendis similique. Repudiandae quod et sint quasi, reprehenderit dicta reiciendis, asperiores cumque esse commodi excepturi.</p>
+            </section>
+
+            <aside id="sidebar">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores aliquid suscipit inventore repudiandae quod, soluta quis veniam. Amet fuga nobis sunt quibusdam fugiat mollitia eligendi excepturi
+                    laboriosam alias. Atque debitis a harum commodi quia fuga facilis reprehenderit pariatur in, autem nostrum impedit, deserunt doloribus tenetur quisquam dignissimos? Ipsum, omnis officiis?</p>
+            </aside>
+        </div>
+
+        <footer>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel architecto quia, doloremque magni beatae et.</p>
+        </footer>
+
+    </main>
+
+
 </body>
 </html>
